--- a/react-project/src/App.css
+++ b/react-project/src/App.css
@@ -1,6 +1,62 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  --primary-color:#1b263b;
+  --secondary-color:#0d1b2a;
+  --card-bg-color:#415A77;
+  --border-color:#778DA9;
+}
+body{
+  margin: 0;
+  padding: 0;
+}
+header{
+  background-color: var(--secondary-color);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.search-btn{
+  width: 500px;
+  outline: none;
+  padding: 5px;
+  background-color: var(--primary-color);
+  border:1px solid #fff;
+}
+.avatar{
+  background-color: var(--primary-color);
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+}
+main{
+  margin: 40px 0;
+}
+.post-card-wrapper{
+  width: 260px;
+  padding: 10px;
+  border: 1px solid var(--border-color);
+  background-color: var(--card-bg-color);
+  border-radius: 10px;
+  margin: 10px;
+  display: inline-block;
+  cursor: pointer;
+}
+img{
+  width: 100%;
+}
+.post-card-description{
+  font-weight: 600;
+}
+.post-card-footer{
+  margin: 10px 0;
+  font-weight: 700;
+  border:1px solid var(--border-color);
+  padding: 10px;
+  border-radius: 10px;
+  transition: 0.3s ease-in-out;
+}
+.post-card-footer:hover{
+  background-color: var(--border-color);
 }
